# DSGRN

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  ACKNOWLEDGEMENTS  CMakeLists.txt  INSTALL  LICENSE  MANIFEST.in  README.md  index.html  install.sh  makefile  setup.py
.install/: boost.sh  build.sh  delegator.sh  mpi.sh  openmpi.sh  parse.sh  sqlite3.sh
Tutorials/: Bistable repressilator.ipynb  BistableRepressilator.ipynb  DSGRNPlusDemo.ipynb  DSGRN_Python_GettingStarted.ipynb  GettingStarted.ipynb  PatternMatchExperiments.ipynb  PatternMatchTutorial.ipynb  QueryTutorial.ipynb  RegexQueries.ipynb  ResourceEstimates.ipynb  br.txt  br2.txt  querytest.db
Tutorials/doc/: QueryTutorial.ipynb  querytest.txt
doc/: BUILDDOC  index.raw
docs/: api.rst  conf.py  index.rst  installation.rst  networks.rst  parameters.rst  signatures.rst  tutorial.rst
docs/images/: dsgrn.gv
include/: DSGRN.h  DSGRN.hpp  Idiom.h  common.h
include/Database/: SHA256.h  json.h  sqlambda.h
include/Dynamics/: Annotation.h  Annotation.hpp  MorseDecomposition.h  MorseDecomposition.hpp  MorseGraph.h  MorseGraph.hpp
include/Graph/: Components.h  Components.hpp  Digraph.h  Digraph.hpp  Poset.h  (+3 more)
networks/: 10D_A.txt  10D_B.txt  11D_2016_04_18_malaria40hrDuke_90TF_BACKWARDS_essential.txt  11D_2016_04_18_malaria40hrDuke_90TF_essential.txt  11D_2016_04_18_malaria40hrDuke_subcycle_90TF_essential.txt  13D_p53.txt  13D_p53_strong.txt  2D_2016_03_07_Cancer_M_EE1_partial_essential.txt  2D_Example.txt  2D_Example_A.txt  2D_Example_B.txt  2D_Example_C.txt  3D_All_1.txt  3D_Clock.txt  3D_Example.txt  3D_Haase_I.txt  3D_Haase_II.txt  3D_Haase_III.txt  3D_Repress_Prod.txt  3D_Repress_Sum.txt  4D_2016_04_08_yeastgoldstandard_essential.txt  4D_Cycle.txt  4D_Cycle_2.txt  4D_Example.txt  5D_2015_09_11.txt  5D_2015_10_21.txt  5D_2015_10_23.txt  5D_2015_11_12.txt  5D_2016_01_05_A.txt  5D_2016_01_05_B.txt  5D_2016_01_05_C.txt  5D_2016_01_16_A.txt  5D_2016_01_16_B.txt  5D_2016_01_16_C.txt  5D_2016_01_28.txt  5D_2016_02_04_cancer.txt  5D_2016_02_04_cancer_essential.txt  5D_2016_02_08_cancer_essential.txt  5D_2016_02_08_cancer_withRP_essential.txt  5D_2016_02_12.txt  (+68 more)
software/DSGRN-Database/source/: CMakeLists.txt  DSGRN-Database.cpp
software/NetworkLogic/: CMakeLists.txt  README.md  install.sh  makefile
software/NetworkLogic/include/: FactorGraph.h  MonotonicMap.h
software/NetworkLogic/source/: CMakeLists.txt  NetworkComponents.cpp  NetworkLogic.cpp  SampleLogic.cpp
software/PatternMatch/: CMakeLists.txt  LICENSE  README.md  install.sh
software/PatternMatch/doc/example/: Example.sh  README.md  pattern_spec.json
software/PatternMatch/include/: DataStructures.hpp  Example.h  MatchingGraph.h  NumericalSimulationPatternMatch.h  Pattern.h  PatternGraph.h  PatternMatch.h  PatternMatch.hpp  PatternMatchDatabase.h  SearchGraph.h
software/PatternMatch/include/dev/: LabelWalls.hpp
software/PatternMatch/source/: CMakeLists.txt  LabelWalls.cpp  LazyPermutations.cpp  MatchingGraph.cpp  MatchingRelation.cpp  NumericalSimulationPatternMatch.cpp  Pattern.cpp  PatternGraph.cpp  PatternMatch.cpp  PatternMatchDatabase.cpp  SearchGraph.cpp
software/PatternMatch/tests/: CMakeLists.txt  TestLabelWalls.cpp  TestMatchingGraph.cpp  TestPattern.cpp  TestPatternGraph.cpp  TestPatternMatch.cpp  TestSearchGraph.cpp  testDataStructures.cpp  testPatternMatch.cpp
software/PatternMatch/tests/dev/: TestDataStructures.cpp  TestPatternMatch.cpp
software/Python/: .gitignore  CMakeLists.txt  README.md  analyze.py  install.sh
software/Python/PatternMatching/: .coverage  .coveragerc  Haasepatternmatch.py  conley3parallelrun.sh  fileparsers.py  malariapatternmatch.py  malariapatternmatch_20hr.py  patternmatch.py  patternsnatcher.py  postprocessresults.py  preprocess.py  repressilatorexamples.py  test_domaingraph.py  test_patternmatch.py  test_preprocess.py  test_timing.py  test_walllabels.py  testcases.py  testme.py  useDSGRN.py  walllabels.py
software/Python/PatternMatching/alternatewalllabeling/: patternmatch_simpler.py  walllabels_simpler.py
software/Python/PatternMatching/malaria/: networkgrower.py  parseResults.py  patternsnatcher.py  usepatternsnatcher.py
software/Python/PatternMatching/testparallel/: test01.py
software/Python/doc/: DSGRN_Python_GettingStarted.ipynb  PatternMatchExperiments.ipynb  PatternMatchExperiments_2017-06-06.ipynb  PatternMatchTutorial.ipynb  QueryTutorial.ipynb  network.txt
software/Python/modules/: setup.py
software/Python/modules/DSGRN/: AlignmentGraph.py  ComputeSingleGeneQuery.py  Database.py  DoubleFixedPointQuery.py  FixedPointTables.py  Graph.py  HysteresisQuery.py  InducibilityQuery.py  Logging.py  MonostableFixedPointQuery.py  MonostableQuery.py  MultistableQuery.py  PhenotypeQuery.py  SingleFixedPointQuery.py  SingleGeneQuery.py  StableFCQuery.py  __init__.py
software/Python/source/: CMakeLists.txt  pyDSGRN.cpp
software/Python/web/: README.md
software/Python/web/jupyter-dsgrn/: Dockerfile
software/Python/web/proxy/: proxy.js
software/Signatures/: CMakeLists.txt  README.md  database_script.sh  database_script2.sh  install.sh  makefile
software/Signatures/include/: Signatures.h
software/Signatures/source/: CMakeLists.txt  Signatures.cpp
software/Signatures/tests/: test1.sh
source/: CMakeLists.txt  DSGRN.cpp
src/: library.cpp
tests/: CMakeLists.txt  TestAnnotation.cpp  TestComponents.cpp  TestDigraph.cpp  TestDomain.cpp  TestDomainGraph.cpp  TestJSON.cpp  TestMatchingGraph.cpp  TestMorseDecomposition.cpp  TestMorseGraph.cpp  TestNetwork.cpp  TestOrderParameter.cpp  TestParameter.cpp  TestParameterGraph.cpp  TestPattern.cpp  TestPatternGraph.cpp  TestPatternMatch.cpp  TestPoset.cpp  TestSearchGraph.cpp  TestStrongComponents.cpp  TestWall.cpp  TestWallGraph.cpp  makefile  test.sh  unittests.sh  unittests.txt
tests/networks/: network1.txt  network2.txt  network3.txt  network4.txt  network5.db  network6.txt  network7.txt  network8.txt
tests/suite/: test1.in  test1.out  test2.in  test2.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in
(+296 files in other folders)
